# ScienceAI_Optical

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  README_SCRIPTS.md  ScienceAI_Architecture_v2.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/costs/: page.tsx
dashboard/src/app/debug/: page.tsx
dashboard/src/app/new/: page.tsx
dashboard/src/app/session/: page.tsx
dashboard/src/components/: GlassCard.tsx  Sidebar.tsx
dashboard/src/lib/: api.ts
src/science_ai/: config.py  main.py
src/science_ai/agents/: base.py  critique.py  deep_reader.py  experiment_planner.py  gap_detector.py  idea_generator.py  paper_triage.py  query_planner.py  report_writer.py  verification.py
src/science_ai/api/: routes.py  schemas.py
src/science_ai/cost/: __init__.py  tracker.py
src/science_ai/orchestrator/: feedback.py  model_router.py  monitor.py  orchestrator.py
src/science_ai/services/: cli_llm_client.py  embedding.py  llm_client.py  paper_search.py  pdf_parser.py  zotero_client.py
src/science_ai/storage/: database.py  graph_store.py  knowledge_repo.py  models.py  session_memory.py  session_repo.py  vector_store.py
tests/test_agents/: test_assumption_chain.py  test_citation_graph.py  test_evaluation_blindspots.py  test_graph_store.py  test_method_problem_matrix.py  test_vector_store.py
tests/test_api/: test_routes.py
tests/test_services/: test_cost_tracker.py  test_feedback.py  test_knowledge_repo.py  test_llm_client.py  test_model_router.py  test_session_repo.py
(+6 files in other folders)
